core apps and configurations

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 staticfiles/
 .envs/*
 !.envs/.env.example
+secrets/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
