--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ inflection==0.5.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 kombu==5.5.3
+loguru==0.7.3
 oauthlib==3.2.2
 phonenumbers==9.0.6
 pillow==11.2.1
