docker local development configuration and email templates

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ staticfiles/
 .envs/*
 !.envs/.env.example
 secrets/
+scripts/
+backend/logs/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
