--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,10 @@ services:
       sh -c "python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/backend
-    ports:
-      - 8000:8000
+    # ports:
+    #   - 8000:8000
+    expose:
+      - "8000"
     environment:
       - DEBUG=true
       - SITE_NAME=NextGen Bank
@@ -64,6 +66,17 @@ services:
       - MP_SMTP_AUTH_ACCEPT_ANY=1
       - MP_SMTP_AUTH_ALLOW_INSECURE=1
 
+  proxy:
+    build: ./docker/local/proxy
+    restart: always
+    ports:
+      - "8080:80"
+    volumes:
+      - ./backend/staticfiles:/backend/staticfiles
+      - logs-store:/var/log/nginx
+    depends_on:
+      - backend
+
 
 secrets:
   secret_key:
@@ -76,3 +89,4 @@ secrets:
 volumes:
   postgres_data:
   banker_mailpit_db:
+  logs-store:
