--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
       args:
         - DEV=true
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py collectstatic --noinput && \
+            python manage.py migrate && \
+            python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/backend
     # ports:
