--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,9 @@ services:
       - BANK_NAME=NextGen Bank
       - CELERY_BROKER_URL=amqp://rabbitmq
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - CLOUDINARY_CLOUD_NAME=/run/secrets/cloudinary_cloud_name
+      - CLOUDINARY_API_KEY=/run/secrets/cloudinary_api_key
+      - CLOUDINARY_API_SECRET=/run/secrets/cloudinary_api_secret
     depends_on:
       db:
         condition: service_healthy
@@ -45,6 +48,9 @@ services:
       - secret_key
       - admin_url
       - db_password
+      - cloudinary_api_key
+      - cloudinary_api_secret
+      - cloudinary_cloud_name
 
   redis:
     image: redis:8.0.2
@@ -158,6 +164,12 @@ secrets:
     file: ./secrets/admin_url.txt
   db_password:
     file: ./secrets/db_password.txt
+  cloudinary_cloud_name:
+   file: ./secrets/cloudinary_cloud_name.txt
+  cloudinary_api_secret:
+    file: ./secrets/cloudinary_api_secret.txt
+  cloudinary_api_key:
+    file: ./secrets/cloudinary_api_key.txt
 
 volumes:
   postgres_data:
